Fix logo visibility and mobile responsiveness

--- a/css/international college academy.css
+++ b/css/international college academy.css
@@ -34,7 +34,7 @@ body{
 .carousel {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.99);
   flex: 1;
-  height: 779px;
+  height: 769px;
   margin-top: -51px;
   margin-left: -32px;
   position: relative;
@@ -298,7 +298,7 @@ a{
   display: block;
   border: 3px solid goldenrod;
   border-radius: 10px;
-  margin-top: -300%;
+  margin-top: -20%;
   margin-left: 90px;
   position: relative;
   z-index: 99;
